--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 	font-family: Arial;
 	text-align: center;
 	border: none;
+	margin-top:50px;
 	margin-bottom: 0px;
 }
 
@@ -24,7 +25,10 @@
 	
 }
 
-
+.carousel-inner > .carousel-item  img {
+	width:100%;
+	height:560px;
+  }
 
 .card{
 	background-color: #cad2c5;
@@ -82,9 +86,28 @@ form .form-row ,.form-group{
 	margin-bottom: 15px;
 }
 
+.pills{
+	margin-top: 25px;
+}
+.sub_container{
+	margin-top: 25px;
+}
 /*.card-img-top{
 	height:200px;
 }*/
+
+/*class table.html*/
+.accordion .btn-link{	
+	text-decoration:none;
+	font-family: Arial;
+	font-size: 20px;
+	color:beige;
+}
+
+.accordion .card{
+	background-color: #2f3e46;
+	color:white
+}
 
 /*EXTRA SMALL DEVICES*/
 @media (max-width: 575px) { 
@@ -94,7 +117,6 @@ form .form-row ,.form-group{
 	}
 
 }
-
 
 
 
