--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .jumbotron {
   background-color: #f48c06;
-  color: white;
+  color: White;
   font-family: Arial;
   text-align: center;
   border: none;
@@ -53,7 +53,7 @@ thead {
   width: 100%; }
 
 .table-data {
-  background-color: white;
+  background-color: White;
   margin-top: 50px;
   margin-bottom: 50px; }
 
@@ -69,9 +69,6 @@ form .form-row, .form-group {
 .sub_container {
   margin-top: 25px; }
 
-/*.card-img-top{
-	height:200px;
-}*/
 /*class table.html*/
 .accordion .btn-link {
   text-decoration: none;
@@ -81,7 +78,7 @@ form .form-row, .form-group {
 
 .accordion .card {
   background-color: #2f3e46;
-  color: white; }
+  color: White; }
 
 /*EXTRA SMALL DEVICES*/
 @media (max-width: 575px) {
@@ -93,7 +90,6 @@ form .form-row, .form-group {
   .picture-cover {
     height: 300px;
     width: 100%;
-    background-image: url("../drinks.jpg");
     background-size: contain;
     background-repeat: no-repeat; } }
 
@@ -104,7 +100,6 @@ form .form-row, .form-group {
   .picture-cover {
     height: 400px;
     width: 100%;
-    background-image: url("../drinks.jpg");
     background-size: contain;
     background-repeat: no-repeat; } }
 
@@ -113,7 +108,6 @@ form .form-row, .form-group {
   .picture-cover {
     height: 600px;
     width: 100%;
-    background-image: url("../drinks.jpg");
     background-size: contain;
     background-repeat: no-repeat; }
   .card-img-top {
