--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,29 @@
 $Blue:#8e9ea1;
 $Yellow:#f48c06;
+$Green:1b4332;
+$White_Background:White;
+$Red:#d00000;
+
+@mixin Margin_card {
+    background-color: #cad2c5;
+	margin-right: 2px;
+	margin-bottom: 5px;
+	margin-left: 2px;
+	margin-top: 5px; 
+}
+
+@mixin image_carrousel($image){
+
+    background: {
+        size: contain;
+        repeat: no-repeat;
+    }
+}
+
 
 .jumbotron{
 	background-color: $Yellow;
-	color: white;
+	color: $White_Background;
 	font-family: Arial;
 	text-align: center;
 	border: none;
@@ -34,11 +54,7 @@ $Yellow:#f48c06;
   }
 
 .card{
-	background-color: #cad2c5;
-	margin-right: 2px;
-	margin-bottom: 5px;
-	margin-left: 2px;
-	margin-top: 5px; 
+	@include Margin_card;
 }
 
 
@@ -76,7 +92,7 @@ thead{
 	width: 100%;
 }
 .table-data{
-	background-color: white;
+	background-color:$White_Background;
 	margin-top: 50px;
 	margin-bottom: 50px;
 }
@@ -95,9 +111,7 @@ form .form-row ,.form-group{
 .sub_container{
 	margin-top: 25px;
 }
-/*.card-img-top{
-	height:200px;
-}*/
+
 
 /*class table.html*/
 .accordion .btn-link{	
@@ -109,7 +123,7 @@ form .form-row ,.form-group{
 
 .accordion .card{
 	background-color: #2f3e46;
-	color:white
+	color: $White_Background;
 }
 
 /*EXTRA SMALL DEVICES*/
@@ -128,11 +142,9 @@ form .form-row ,.form-group{
 @media (min-width: 576px) { 
 	.picture-cover{
 		height: 300px;
-		width: 100%;
-		background-image: url("../drinks.jpg");
-		background-size: contain;
-		background-repeat: no-repeat;
-
+        width: 100%;
+        @include image_carrousel("../drinks.jpg");
+		
 	}
 	
 
@@ -148,9 +160,7 @@ form .form-row ,.form-group{
 	.picture-cover{
 		height: 400px;
 		width: 100%;
-		background-image: url("../drinks.jpg");
-		background-size: contain;
-		background-repeat: no-repeat;
+		@include image_carrousel("../drinks.jpg");
 
 	}
 
@@ -164,10 +174,7 @@ form .form-row ,.form-group{
 	.picture-cover{
 		height: 600px;
 		width: 100%;
-		background-image: url("../drinks.jpg");
-		background-size: contain;
-		background-repeat: no-repeat;
-
+		@include image_carrousel("../drinks.jpg");
 	}
 
 	.card-img-top{
